<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:padding="20dp">
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/testDay"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/btClose"
                android:tag="btClose"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:onClick="returnBalanceWiew"
                android:src="@drawable/ic_x" />
        </RelativeLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">
            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:src="@drawable/ic_shop"/>
            <EditText
                android:id="@+id/etMoney"
                android:inputType="numberDecimal"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text=""
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="28sp"
                android:hint="0.00"
                android:background="@color/green"
                android:layout_marginEnd="0dp"
                android:gravity="center"
                android:textColorHint="#f0f0f0"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvMoney"
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:background="@color/green"
                android:text="S/."
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
        <TextView
            android:id="@+id/tvTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subcategory"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="17sp"/>
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgSubCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.chip.ChipGroup>
        <TextView
            android:id="@+id/tvTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="17sp"/>
        <GridLayout
            android:id="@+id/lyCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:columnCount="3">
        </GridLayout>
        <Button
            android:id="@+id/btAdd"
            android:tag="btAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addItem"
            android:onClick="returnBalanceWiew"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>
