<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BalanceActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:id="@+id/lyMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black">

        <LinearLayout
            android:id="@+id/lyDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="45dp">
                <LinearLayout
                    android:id="@+id/lyMonths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                </LinearLayout>
            </HorizontalScrollView>
            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="45dp">
                <LinearLayout
                    android:id="@+id/lyDays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lyContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lyBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp" >
                <TextView
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"
                    android:textSize="22sp"
                    android:layout_marginLeft="25dp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:layout_weight="0.5"
                    android:textAlignment="textEnd"
                    android:layout_marginRight="25dp"
                    android:id="@+id/txBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/testNum"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />

            </LinearLayout>
            <GridLayout
                android:id="@+id/lyCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:columnCount="4">
            </GridLayout>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pcBalance"
                android:layout_width="match_parent"
                android:layout_height="331dp" />
            <LinearLayout
                android:id="@+id/lyButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp">
                <Button
                    android:id="@+id/btRegister1"
                    android:tag="btRegister1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spending"
                    android:layout_weight="0.5"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="25dp"
                    android:onClick="registerItem"
                    android:backgroundTint="@color/red" />
                <Button
                    android:id="@+id/btRegister2"
                    android:tag="btRegister2"
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entry"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="15dp"
                    android:onClick="registerItem"
                    android:backgroundTint="@color/green"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
